Fix TimeTable Session Text DOJOCON-286

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ layout: default
 					<li class="duration-30min">
 					</li>
 					<li class="bg-light duration-10min">
-						<h3 class="session-title"><!-- <a href="#about-coder-dojo" class="js-session-detail-trigger"> -->CoderDojoとは<span class="speaker"> / 細谷 崇</span><!-- </a> --></h3>
+						<h3 class="session-title"><!-- <a href="#opening-ceremony" class="js-session-detail-trigger"> -->オープニングセレモニー<span class="speaker"> / 細谷 崇</span><!-- </a> --></h3>
 						<p class="time">[10:30-10:40]</p>
 					</li>
 					<li class="bg-dark duration-40min break-5min">
@@ -226,11 +226,11 @@ layout: default
 						<p class="time">[10:40-11:20]</p>
 					</li>
 					<li class="bg-light duration-20min">
-						<h3 class="session-title"><!-- <a href="#student-champions" class="js-session-detail-trigger"> -->学生の道場運営者に聞く！<span class="speaker"> / 宮島 衣瑛, 東 和樹</span><!-- </a> --></h3>
+						<h3 class="session-title"><a href="#student-champions" class="js-session-detail-trigger">学生の道場運営者に聞く！<span class="speaker"> / 宮島 衣瑛, 東 和樹</span></a></h3>
 						<p class="time">[11:25-11:45]</p>
 					</li>
 					<li class="bg-dark duration-20min break-5min">
-						<h3 class="session-title"><!-- <a href="#blocklyduino" class="js-session-detail-trigger"> -->子供でもArduinoを操作できるBlocklyDuinoの紹介<span class="speaker"> / 岡田 裕行</span><!-- </a> --></h3>
+						<h3 class="session-title"><a href="#blocklyduino" class="js-session-detail-trigger">子供でもArduinoを操作できるBlocklyDuinoの紹介<span class="speaker"> / 岡田 裕行</span></a></h3>
 						<p class="time">[11:45-12:05]</p>
 					</li>
 					<li class="bg-light duration-15min">
@@ -246,7 +246,7 @@ layout: default
 						<!-- <p class="time">[12:50-13:05]</p> -->
 					</li>
 					<li class="bg-dark duration-20min break-5min">
-						<h3 class="session-title"><!-- <a href="#coderdojo-minecraft" class="js-session-detail-trigger"> -->CoderDojoでMinecraftに触れる理由<span class="speaker"> / 寺園 聖文</span><!-- </a> --></h3>
+						<h3 class="session-title"><a href="#coderdojo-minecraft" class="js-session-detail-trigger">CoderDojoでMinecraftに触れる理由<span class="speaker"> / 寺園 聖文</span></a></h3>
 						<p class="time">[13:05-13:25]</p>
 					</li>
 					<li class="bg-light duration-15min">
@@ -254,7 +254,7 @@ layout: default
 						<!-- <p class="time">[13:30-13:45]</p> -->
 					</li>
 					<li class="bg-dark duration-20min break-5min">
-						<h3 class="session-title"><!-- <a href="#coderdojo-kodaira" class="js-session-detail-trigger"> -->CoderDojo小平の活動内容<span class="speaker"> / とがぞの</span><!-- </a> --></h3>
+						<h3 class="session-title"><a href="#coderdojo-kodaira" class="js-session-detail-trigger">CoderDojo小平の活動内容<span class="speaker"> / とがぞの</span></a></h3>
 						<p class="time">[13:45-14:05]</p>
 					</li>
 					<li class="bg-light duration-15min">
@@ -266,11 +266,11 @@ layout: default
 						<!-- <p class="time">[14:35-14:55]</p> -->
 					</li>
 					<li class="bg-light duration-40min">
-						<h3 class="session-title"><!-- <a href="#coderdojo-foundation" class="js-session-detail-trigger"> -->CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる<span class="speaker"> / ロス・オニール<!-- </a> --></h3>
+						<h3 class="session-title"><a href="#coderdojo-foundation" class="js-session-detail-trigger">CoderDojoムーブメントの旅 - アイルランドの1つのDojoから世界に広がる1000 Dojoへの軌跡をたどる（仮）<span class="speaker"> / ロス・オニール</a></h3>
 						<p class="time">[15:00-15:40]</p>
 					</li>
 					<li class="bg-dark duration-40min break-10min">
-						<h3 class="session-title"><a href="#champion-panel-discussion" class="js-session-detail-trigger">チャンピオンパネルディスカッション<span class="speaker"> / 細谷 崇, 宮島 衣瑛, とがぞの</span></a></h3>
+						<h3 class="session-title"><a href="#champion-panel-discussion" class="js-session-detail-trigger">チャンピオンパネルディスカッション（仮）<span class="speaker"> / 細谷 崇, 宮島 衣瑛, とがぞの</span></a></h3>
 						<p class="time">[15:40-16:20]</p>
 					</li>
 					<li class="bg-dark duration-10min">
