--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@ layout: default
 				<h2>Session Line</h2>
 				<ol class="sessions">
 					<li class="duration-30min">
+						<h3 class="session-title">開場・受付</h3>
+						<p class="time">[10:00]</p>
 					</li>
 					<li class="bg-light duration-10min">
 						<h3 class="session-title"><!-- <a href="#opening-ceremony" class="js-session-detail-trigger"> -->オープニングセレモニー<span class="speaker"> / 細谷 崇</span><!-- </a> --></h3>
@@ -282,6 +284,8 @@ layout: default
 				<h2>Workshop Line</h2>
 				<ol class="workshops">
 					<li class="duration-50min break-10min">
+						<h3 class="session-title">開場・受付</h3>
+						<p class="time">[10:00]</p>
 					</li>
 					<li class="bg-light duration-50min break-10min">
 						<h3 class="workshop-title"><a href="#workshop-coderdojo" class="js-session-detail-trigger">CoderDojo体験</a></h3>
