Add Staff Image #35

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ layout: default
 			<h2 class="member-name">岡田裕行</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' }}" alt="寺園聖文のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff_terazono.jpg }}" alt="寺園聖文のプロフィール画像"></figure>
 			<h2 class="member-name">寺園聖文</h2>
 		</li>
 		<li>
