--- a/index.html
+++ b/index.html
@@ -393,52 +393,68 @@ layout: default
 	</h1>
 	<ul class="members">
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_hosoya.jpg' }}" alt="細谷崇のプロフィール画像"></figure>
-			<h2 class="member-name">細谷崇</h2>
+			<a href="http://ht79.info/" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_hosoya.jpg' }}" alt="細谷崇のプロフィール画像"></figure>
+				<h2 class="member-name">細谷崇</h2>
+			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_wakabayashi.jpg' }}" alt="若林健一のプロフィール画像"></figure>
-			<h2 class="member-name">若林健一</h2>
+			<a href="http://kwaka1208.net/" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_wakabayashi.jpg' }}" alt="若林健一のプロフィール画像"></figure>
+				<h2 class="member-name">若林健一</h2>
+			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_sumida.jpg' }}" alt="角田一平のプロフィール画像"></figure>
-			<h2 class="member-name">角田一平</h2>
+			<a href="http://unplat.info" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_sumida.jpg' }}" alt="角田一平のプロフィール画像"></figure>
+				<h2 class="member-name">角田一平</h2>
+			</a>
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' }}" alt="酒井久伸のプロフィール画像"></figure>
 			<h2 class="member-name">酒井久伸</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_terui.jpg' }}" alt="照井晶子のプロフィール画像"></figure>
-			<h2 class="member-name">照井晶子</h2>
+			<a href="https://twitter.com/terui_teruteru" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_terui.jpg' }}" alt="照井晶子のプロフィール画像"></figure>
+				<h2 class="member-name">照井晶子</h2>
+			</a>
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' }}" alt="大野由衣のプロフィール画像"></figure>
 			<h2 class="member-name">大野由衣</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_okada.jpg' }}" alt="岡田裕行のプロフィール画像"></figure>
-			<h2 class="member-name">岡田裕行</h2>
+			<a href="http://okhiroyuki.github.io" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_okada.jpg' }}" alt="岡田裕行のプロフィール画像"></figure>
+				<h2 class="member-name">岡田裕行</h2>
+			</a>
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff_terazono.jpg' }}" alt="寺園聖文のプロフィール画像"></figure>
 			<h2 class="member-name">寺園聖文</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_yamamoto.jpg' }}" alt="山本倫江のプロフィール画像"></figure>
-			<h2 class="member-name">山本倫江</h2>
+			<a href="http://michie-yamamoto.com" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_yamamoto.jpg' }}" alt="山本倫江のプロフィール画像"></figure>
+				<h2 class="member-name">山本倫江</h2>
+			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' }}" alt="永田明のプロフィール画像"></figure>
-			<h2 class="member-name">永田明</h2>
+			<a href="https://twitter.com/nagaaki46" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' }}" alt="永田明のプロフィール画像"></figure>
+				<h2 class="member-name">永田明</h2>
+			</a>
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' }}" alt="永富千春のプロフィール画像"></figure>
 			<h2 class="member-name">永富千春</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' }}" alt="高坂智美のプロフィール画像"></figure>
-			<h2 class="member-name">高坂智美</h2>
+			<a href="https://jp.linkedin.com/in/tomomikosaka" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' }}" alt="高坂智美のプロフィール画像"></figure>
+				<h2 class="member-name">高坂智美</h2>
+			</a>
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' }}" alt="Kel Santiago-Pilarskiのプロフィール画像"></figure>
@@ -453,28 +469,36 @@ layout: default
 			<h2 class="member-name">浅賀功次</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_chikaoka.jpg' }}" alt="近岡真由美のプロフィール画像"></figure>
-			<h2 class="member-name">近岡真由美</h2>
+			<a href="http://mymckok.tumblr.com/" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_chikaoka.jpg' }}" alt="近岡真由美のプロフィール画像"></figure>
+				<h2 class="member-name">近岡真由美</h2>
+			</a>
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff_nezu.jpg' }}" alt="根津将之のプロフィール画像"></figure>
 			<h2 class="member-name">根津将之</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_suma.jpg' }}" alt="須磨信幸のプロフィール画像"></figure>
-			<h2 class="member-name">須磨信幸</h2>
+			<a href="https://twitter.com/donguri9" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_suma.jpg' }}" alt="須磨信幸のプロフィール画像"></figure>
+				<h2 class="member-name">須磨信幸</h2>
+			</a>
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff_kawanabe.jpg' }}" alt="川鍋友宏のプロフィール画像"></figure>
 			<h2 class="member-name">川鍋友宏</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_doi.jpg' }}" alt="土居安佳里のプロフィール画像"></figure>
-			<h2 class="member-name">土居安佳里</h2>
+			<a href="http://akarihonokani.com/" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_doi.jpg' }}" alt="土居安佳里のプロフィール画像"></figure>
+				<h2 class="member-name">土居安佳里</h2>
+			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_kite.jpg' }}" alt="カイトのプロフィール画像"></figure>
-			<h2 class="member-name">カイト</h2>
+			<a href="http://kiteretz.com" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_kite.jpg' }}" alt="カイトのプロフィール画像"></figure>
+				<h2 class="member-name">カイト</h2>
+			</a>
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' }}" alt="井上一のプロフィール画像"></figure>
@@ -485,8 +509,10 @@ layout: default
 			<h2 class="member-name">小寺順子</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_sugiyama.jpg' }}" alt="杉山敦のプロフィール画像"></figure>
-			<h2 class="member-name">杉山敦</h2>
+			<a href="http://www.pictron.net" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_sugiyama.jpg' }}" alt="杉山敦のプロフィール画像"></figure>
+				<h2 class="member-name">杉山敦</h2>
+			</a>
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' }}" alt="池上緑のプロフィール画像"></figure>
@@ -501,20 +527,26 @@ layout: default
 			<h2 class="member-name">田重田勝一郎</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_kawabata.jpg' }}" alt="川端善行のプロフィール画像"></figure>
-			<h2 class="member-name">川端善行</h2>
+			<a href="http://phantom-face.com" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_kawabata.jpg' }}" alt="川端善行のプロフィール画像"></figure>
+				<h2 class="member-name">川端善行</h2>
+			</a>
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' }}" alt="森巧尚のプロフィール画像"></figure>
 			<h2 class="member-name">森巧尚</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_yasukawa.jpg' }}" alt="安川要平のプロフィール画像"></figure>
-			<h2 class="member-name">安川要平</h2>
+			<a href="https://twitter.com/yasulab" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_yasukawa.jpg' }}" alt="安川要平のプロフィール画像"></figure>
+				<h2 class="member-name">安川要平</h2>
+			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_togazono.jpg' }}" alt="とがぞののプロフィール画像"></figure>
-			<h2 class="member-name">とがぞの</h2>
+			<a href="http://www.togazo.com/" target="_blank">
+				<figure class="member-avator"><img src="{{ '/assets/images/staff_togazono.jpg' }}" alt="とがぞののプロフィール画像"></figure>
+				<h2 class="member-name">とがぞの</h2>
+			</a>
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' }}" alt="柴田重臣のプロフィール画像"></figure>
