--- a/index.html
+++ b/index.html
@@ -394,162 +394,162 @@ layout: default
 	<ul class="members">
 		<li>
 			<a href="http://ht79.info/" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_hosoya.jpg' | prepend: site.baseurl }}" alt="細谷崇のプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-hosoya.jpg' | prepend: site.baseurl }}" alt="細谷崇のプロフィール画像"></figure>
 				<h2 class="member-name">細谷崇</h2>
 			</a>
 		</li>
 		<li>
 			<a href="http://kwaka1208.net/" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_wakabayashi.jpg' | prepend: site.baseurl }}" alt="若林健一のプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-wakabayashi.jpg' | prepend: site.baseurl }}" alt="若林健一のプロフィール画像"></figure>
 				<h2 class="member-name">若林健一</h2>
 			</a>
 		</li>
 		<li>
 			<a href="http://unplat.info" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_sumida.jpg' | prepend: site.baseurl }}" alt="角田一平のプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-sumida.jpg' | prepend: site.baseurl }}" alt="角田一平のプロフィール画像"></figure>
 				<h2 class="member-name">角田一平</h2>
 			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' | prepend: site.baseurl }}" alt="酒井久伸のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="酒井久伸のプロフィール画像"></figure>
 			<h2 class="member-name">酒井久伸</h2>
 		</li>
 		<li>
 			<a href="https://twitter.com/terui_teruteru" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_terui.jpg' | prepend: site.baseurl }}" alt="照井晶子のプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-terui.jpg' | prepend: site.baseurl }}" alt="照井晶子のプロフィール画像"></figure>
 				<h2 class="member-name">照井晶子</h2>
 			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' | prepend: site.baseurl }}" alt="大野由衣のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-ohno.jpg' | prepend: site.baseurl }}" alt="大野由衣のプロフィール画像"></figure>
 			<h2 class="member-name">大野由衣</h2>
 		</li>
 		<li>
 			<a href="http://okhiroyuki.github.io" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_okada.jpg' | prepend: site.baseurl }}" alt="岡田裕行のプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-okada.jpg' | prepend: site.baseurl }}" alt="岡田裕行のプロフィール画像"></figure>
 				<h2 class="member-name">岡田裕行</h2>
 			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_terazono.jpg' | prepend: site.baseurl }}" alt="寺園聖文のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-terazono.jpg' | prepend: site.baseurl }}" alt="寺園聖文のプロフィール画像"></figure>
 			<h2 class="member-name">寺園聖文</h2>
 		</li>
 		<li>
 			<a href="http://michie-yamamoto.com" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_yamamoto.jpg' | prepend: site.baseurl }}" alt="山本倫江のプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-yamamoto.jpg' | prepend: site.baseurl }}" alt="山本倫江のプロフィール画像"></figure>
 				<h2 class="member-name">山本倫江</h2>
 			</a>
 		</li>
 		<li>
 			<a href="https://twitter.com/nagaaki46" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' | prepend: site.baseurl }}" alt="永田明のプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="永田明のプロフィール画像"></figure>
 				<h2 class="member-name">永田明</h2>
 			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' | prepend: site.baseurl }}" alt="永富千春のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="永富千春のプロフィール画像"></figure>
 			<h2 class="member-name">永富千春</h2>
 		</li>
 		<li>
 			<a href="https://jp.linkedin.com/in/tomomikosaka" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' | prepend: site.baseurl }}" alt="高坂智美のプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="高坂智美のプロフィール画像"></figure>
 				<h2 class="member-name">高坂智美</h2>
 			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' | prepend: site.baseurl }}" alt="Kel Santiago-Pilarskiのプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="Kel Santiago-Pilarskiのプロフィール画像"></figure>
 			<h2 class="member-name">Kel Santiago-Pilarski</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' | prepend: site.baseurl }}" alt="斉田真也のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="斉田真也のプロフィール画像"></figure>
 			<h2 class="member-name">斉田真也</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_asaga.jpg' | prepend: site.baseurl }}" alt="浅賀功次のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-asaga.jpg' | prepend: site.baseurl }}" alt="浅賀功次のプロフィール画像"></figure>
 			<h2 class="member-name">浅賀功次</h2>
 		</li>
 		<li>
 			<a href="http://mymckok.tumblr.com/" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_chikaoka.jpg' | prepend: site.baseurl }}" alt="近岡真由美のプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-chikaoka.jpg' | prepend: site.baseurl }}" alt="近岡真由美のプロフィール画像"></figure>
 				<h2 class="member-name">近岡真由美</h2>
 			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_nezu.jpg' | prepend: site.baseurl }}" alt="根津将之のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-nezu.jpg' | prepend: site.baseurl }}" alt="根津将之のプロフィール画像"></figure>
 			<h2 class="member-name">根津将之</h2>
 		</li>
 		<li>
 			<a href="https://twitter.com/donguri9" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_suma.jpg' | prepend: site.baseurl }}" alt="須磨信幸のプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-suma.jpg' | prepend: site.baseurl }}" alt="須磨信幸のプロフィール画像"></figure>
 				<h2 class="member-name">須磨信幸</h2>
 			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_kawanabe.jpg' | prepend: site.baseurl }}" alt="川鍋友宏のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-kawanabe.jpg' | prepend: site.baseurl }}" alt="川鍋友宏のプロフィール画像"></figure>
 			<h2 class="member-name">川鍋友宏</h2>
 		</li>
 		<li>
 			<a href="http://akarihonokani.com/" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_doi.jpg' | prepend: site.baseurl }}" alt="土居安佳里のプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-doi.jpg' | prepend: site.baseurl }}" alt="土居安佳里のプロフィール画像"></figure>
 				<h2 class="member-name">土居安佳里</h2>
 			</a>
 		</li>
 		<li>
 			<a href="http://kiteretz.com" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_kite.jpg' | prepend: site.baseurl }}" alt="カイトのプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-kite.jpg' | prepend: site.baseurl }}" alt="カイトのプロフィール画像"></figure>
 				<h2 class="member-name">カイト</h2>
 			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' | prepend: site.baseurl }}" alt="井上一のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="井上一のプロフィール画像"></figure>
 			<h2 class="member-name">井上一</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_kodera.jpg' | prepend: site.baseurl }}" alt="小寺順子のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-kodera.jpg' | prepend: site.baseurl }}" alt="小寺順子のプロフィール画像"></figure>
 			<h2 class="member-name">小寺順子</h2>
 		</li>
 		<li>
 			<a href="http://www.pictron.net" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_sugiyama.jpg' | prepend: site.baseurl }}" alt="杉山敦のプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-sugiyama.jpg' | prepend: site.baseurl }}" alt="杉山敦のプロフィール画像"></figure>
 				<h2 class="member-name">杉山敦</h2>
 			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' | prepend: site.baseurl }}" alt="池上緑のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="池上緑のプロフィール画像"></figure>
 			<h2 class="member-name">池上緑</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' | prepend: site.baseurl }}" alt="山下浩平のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="山下浩平のプロフィール画像"></figure>
 			<h2 class="member-name">山下浩平</h2>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_tajuta.jpg' | prepend: site.baseurl }}" alt="田重田勝一郎のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-tajuta.jpg' | prepend: site.baseurl }}" alt="田重田勝一郎のプロフィール画像"></figure>
 			<h2 class="member-name">田重田勝一郎</h2>
 		</li>
 		<li>
 			<a href="http://phantom-face.com" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_kawabata.jpg' | prepend: site.baseurl }}" alt="川端善行のプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-kawabata.jpg' | prepend: site.baseurl }}" alt="川端善行のプロフィール画像"></figure>
 				<h2 class="member-name">川端善行</h2>
 			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' | prepend: site.baseurl }}" alt="森巧尚のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="森巧尚のプロフィール画像"></figure>
 			<h2 class="member-name">森巧尚</h2>
 		</li>
 		<li>
 			<a href="https://twitter.com/yasulab" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_yasukawa.jpg' | prepend: site.baseurl }}" alt="安川要平のプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-yasukawa.jpg' | prepend: site.baseurl }}" alt="安川要平のプロフィール画像"></figure>
 				<h2 class="member-name">安川要平</h2>
 			</a>
 		</li>
 		<li>
 			<a href="http://www.togazo.com/" target="_blank">
-				<figure class="member-avator"><img src="{{ '/assets/images/staff_togazono.jpg' | prepend: site.baseurl }}" alt="とがぞののプロフィール画像"></figure>
+				<figure class="member-avator"><img src="{{ '/assets/images/staff-togazono.jpg' | prepend: site.baseurl }}" alt="とがぞののプロフィール画像"></figure>
 				<h2 class="member-name">とがぞの</h2>
 			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff_dojocon.png' | prepend: site.baseurl }}" alt="柴田重臣のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="柴田重臣のプロフィール画像"></figure>
 			<h2 class="member-name">柴田重臣</h2>
 		</li>
 	</ul>
