Add Footer Photos #39

--- a/index.html
+++ b/index.html
@@ -580,30 +580,30 @@ layout: default
 
 	<div class="photo-gallery">
 		<ul class="photos js-photos">
-			<li><a href="//placehold.it/1500x1000.png"
-				style="background-image: url(//placehold.it/1500x1000);"></a></li>
-			<li><a href="//placehold.it/1000x1500.png"
-				style="background-image: url(//placehold.it/1000x1500);"></a></li>
-			<li><a href="//placehold.it/1500x1000.png"
-				style="background-image: url(//placehold.it/1500x1000);"></a></li>
-			<li><a href="//placehold.it/1000x1500.png"
-				style="background-image: url(//placehold.it/1000x1500);"></a></li>
-			<li><a href="//placehold.it/1500x1000.png"
-				style="background-image: url(//placehold.it/1500x1000);"></a></li>
-			<li><a href="//placehold.it/1000x1500.png"
-				style="background-image: url(//placehold.it/1000x1500);"></a></li>
-			<li><a href="//placehold.it/1500x1000.png"
-				style="background-image: url(//placehold.it/1500x1000);"></a></li>
-			<li><a href="//placehold.it/1000x1500.png"
-				style="background-image: url(//placehold.it/1000x1500);"></a></li>
-			<li><a href="//placehold.it/1500x1000.png"
-				style="background-image: url(//placehold.it/1500x1000);"></a></li>
-			<li><a href="//placehold.it/1000x1500.png"
-				style="background-image: url(//placehold.it/1000x1500);"></a></li>
-			<li><a href="//placehold.it/1500x1000.png"
-				style="background-image: url(//placehold.it/1500x1000);"></a></li>
-			<li><a href="//placehold.it/1000x1500.png"
-				style="background-image: url(//placehold.it/1000x1500);"></a></li>
+			<li><a href="{{ '/assets/images/footer-01.jpg' | prepend: site.baseurl }}"
+				style="background-image: url({{ '/assets/images/footer-01.jpg' | prepend: site.baseurl }});"></a></li>
+			<li><a href="{{ '/assets/images/footer-07.jpg' | prepend: site.baseurl }}"
+				style="background-image: url({{ '/assets/images/footer-07.jpg' | prepend: site.baseurl }});"></a></li>
+			<li><a href="{{ '/assets/images/footer-02.jpg' | prepend: site.baseurl }}"
+				style="background-image: url({{ '/assets/images/footer-02.jpg' | prepend: site.baseurl }});"></a></li>
+			<li><a href="{{ '/assets/images/footer-08.jpg' | prepend: site.baseurl }}"
+				style="background-image: url({{ '/assets/images/footer-08.jpg' | prepend: site.baseurl }});"></a></li>
+			<li><a href="{{ '/assets/images/footer-03.jpg' | prepend: site.baseurl }}"
+				style="background-image: url({{ '/assets/images/footer-03.jpg' | prepend: site.baseurl }});"></a></li>
+			<li><a href="{{ '/assets/images/footer-09.jpg' | prepend: site.baseurl }}"
+				style="background-image: url({{ '/assets/images/footer-09.jpg' | prepend: site.baseurl }});"></a></li>
+			<li><a href="{{ '/assets/images/footer-04.jpg' | prepend: site.baseurl }}"
+				style="background-image: url({{ '/assets/images/footer-04.jpg' | prepend: site.baseurl }});"></a></li>
+			<li><a href="{{ '/assets/images/footer-10.jpg' | prepend: site.baseurl }}"
+				style="background-image: url({{ '/assets/images/footer-10.jpg' | prepend: site.baseurl }});"></a></li>
+			<li><a href="{{ '/assets/images/footer-05.jpg' | prepend: site.baseurl }}"
+				style="background-image: url({{ '/assets/images/footer-05.jpg' | prepend: site.baseurl }});"></a></li>
+			<li><a href="{{ '/assets/images/footer-11.jpg' | prepend: site.baseurl }}"
+				style="background-image: url({{ '/assets/images/footer-11.jpg' | prepend: site.baseurl }});"></a></li>
+			<li><a href="{{ '/assets/images/footer-06.jpg' | prepend: site.baseurl }}"
+				style="background-image: url({{ '/assets/images/footer-06.jpg' | prepend: site.baseurl }});"></a></li>
+			<li><a href="{{ '/assets/images/footer-12.jpg' | prepend: site.baseurl }}"
+				style="background-image: url({{ '/assets/images/footer-12.jpg' | prepend: site.baseurl }});"></a></li>
 		</ul>
 	</div>
 
