Add Exhibition Photos #40

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ layout: default
 		<h2>Exhibition</h2>
 		<ul class="exhibitions">
 			<li>
-				<figure><img src="//placehold.it/600x360" alt="Touch&amp;Try／BlocklyDuinoのイメージ"></figure>
+				<figure><img src="{{ '/assets/images/exhibition-blocklyduino.jpg' | prepend: site.baseurl }}" alt="Touch&amp;Try／BlocklyDuinoのイメージ"></figure>
 				<div class="description">
 					<h3 class="exhibition-title">Touch&amp;Try／BlocklyDuino<br>
 						<small>[Start : 10:00]<!-- [Area: A] --></small></h3>
@@ -344,7 +344,7 @@ layout: default
 				</div>
 			</li>
 			<li>
-				<figure><img src="//placehold.it/600x360" alt="CoderDojo相談カウンターのイメージ"></figure>
+				<figure><img src="{{ '/assets/images/exhibition-dojoconsulting.jpg' | prepend: site.baseurl }}" alt="CoderDojo相談カウンターのイメージ"></figure>
 				<div class="description">
 					<h3 class="exhibition-title">CoderDojo相談カウンター<br>
 						<small>[Start : 10:00]<!-- [Area: B] --></small></h3>
@@ -354,7 +354,7 @@ layout: default
 				</div>
 			</li>
 			<li>
-				<figure><img src="//placehold.it/600x360" alt="忍者ブースのイメージ"></figure>
+				<figure><img src="{{ '/assets/images/exhibition-ninja.jpg' | prepend: site.baseurl }}" alt="忍者ブースのイメージ"></figure>
 				<div class="description">
 					<h3 class="exhibition-title">忍者ブース<br>
 						<small>[Start : 10:00]<!-- [Area: C] --></small></h3>
@@ -362,7 +362,7 @@ layout: default
 				</div>
 			</li>
 			<li>
-				<figure><img src="//placehold.it/600x360" alt="パーラービーズのイメージ"></figure>
+				<figure><img src="{{ '/assets/images/exhibition-parlorbeads.jpg' | prepend: site.baseurl }}" alt="パーラービーズのイメージ"></figure>
 				<div class="description">
 					<h3 class="exhibition-title">パーラービーズ<br>
 						<small>[Start : 10:00]<!-- [Area: C] --></small></h3>
