--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ layout: default
 			</a>
 		</li>
 		<li>
-			<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="永富千春のプロフィール画像"></figure>
+			<figure class="member-avator"><img src="{{ '/assets/images/staff-nagatomi.jpg' | prepend: site.baseurl }}" alt="永富千春のプロフィール画像"></figure>
 			<h2 class="member-name">永富千春</h2>
 		</li>
 		<li>
