Update the text of "What is DojoCon". Resolve #26

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
 				</span>
 			</h1>
 			<div class="what-is-coderdojo">
-				<h2>CoderDojo って？</h2>
+				<h2>CoderDojoって？</h2>
 				<p>CoderDojoは2011年にアイルランドから始まった子供達にプログラミングを学ぶ場を提供するボランティア主導の世界的な非営利活動です。</p>
 				<p>Dojoの数は世界中で970（2016年5月段階）にも及びます。</p>
 				<p class="coderdojo-logo"><img src="{{ '/assets/images/coderdojo-logo.svg' | prepend: site.baseurl }}" alt="CoderDojo ロゴ"></p>
@@ -44,14 +44,15 @@ layout: default
 			<div class="what-is-dojocon">
 				<figure><img src="{{ '/assets/images/what-is-dojocon-image.jpg' | prepend: site.baseurl }}" alt="DojoCon のイメージ写真"></figure>
 				<div class="text">
-					<h2>DojoCon とは？</h2>
-					<p>DojoConはCoderDojoの主催者、メンターとプログラムを学ぶ子供たち、また活動に賛同・協賛する人が数百人集う大きなイベントです。</p>
+					<h2>DojoConとは？</h2>
+					<p>CoderDojoの主催者やメンター、プログラムを学ぶ子供たち、また活動に賛同・協賛する人が数百人集う大きなイベントです。ヨーロッパでは毎年のように開催され、今年もアイルランドのダブリンで3日間開催されます。DojoConでは、アイデアを共有したり、インスピレーションを得たり、コードでしか知らなかった人に会ったり、価値観が共有できる新しい友人に出会えたり、実践的なスキルについて話合ったりすることができます。</p>
+					<p>CoderDojoをはじめたい人やプログラム教育に興味のある人にとって、コミュニケーションの幅や知識の深さや新たな知見を、また参加したこども達には記憶に残る体験を提供するイベントです。</p>
 				</div>
 			</div>
 			<div class="first-dojocon-japan">
 				<h2>初開催の DojoCon Japan</h2>
-				<p><strong>THE MORE DOJOS, THE MORE COOL CODERS</strong><br />をテーマに
-</p>
+				<p><strong>THE MORE DOJOS, THE MORE COOL CODERS</strong><br />
+					をテーマに</p>
 				<ul>
 					<li><strong>国内でのCoderDojoに携わるメンターの交流</strong></li>
 					<li><strong>プログラム教育、コミュニティー運営、アートなどの各分野に関するエキサイティングなスピーカーを揃えたセッション</strong></li>
