--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ layout: default
 						<p class="time">[10:40-11:20]</p>
 					</li>
 					<li class="bg-light duration-20min">
-						<h3 class="session-title"><!-- <a href="#student-champions" class="js-session-detail-trigger"> -->学生の道場運営者に聞く！（仮）<span class="speaker"> / 宮島 衣瑛, 東 和樹</span><!-- </a> --></h3>
+						<h3 class="session-title"><!-- <a href="#student-champions" class="js-session-detail-trigger"> -->学生の道場運営者に聞く！（仮）<span class="speaker"> / 宮島 衣瑛、東 和樹</span><!-- </a> --></h3>
 						<p class="time">[11:25-11:45]</p>
 					</li>
 					<li class="bg-dark duration-20min break-5min">
