--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ layout: default
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff-nagatomi.jpg' | prepend: site.baseurl }}" alt="永富千春のプロフィール画像"></figure>
-			<h2 class="member-name">永富千春</h2>
+			<h2 class="member-name"><a href="http://uwasora.com/" target="_blank">永富千春</a></h2>
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff-dojocon.png' | prepend: site.baseurl }}" alt="高坂智美のプロフィール画像"></figure>
@@ -483,7 +483,7 @@ layout: default
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff-kodera.jpg' | prepend: site.baseurl }}" alt="小寺順子のプロフィール画像"></figure>
-			<h2 class="member-name">小寺順子</h2>
+			<h2 class="member-name"><a href="http://kozaru.me/" target="_blank">小寺順子</a></h2>
 		</li>
 		<li>
 			<figure class="member-avator"><img src="{{ '/assets/images/staff-sugiyama.jpg' | prepend: site.baseurl }}" alt="杉山敦のプロフィール画像"></figure>
