Add ParlorBeads Photo Credit #58

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ layout: default
 				</div>
 			</li>
 			<li>
-				<figure><img src="{{ '/assets/images/exhibition-parlorbeads.jpg' | prepend: site.baseurl }}" alt="パーラービーズのイメージ"></figure>
+				<figure><img src="{{ '/assets/images/exhibition-parlorbeads.jpg' | prepend: site.baseurl }}" alt="パーラービーズのイメージ"><figcaption>写真提供：岸川麻美</figcaption></figure>
 				<div class="description">
 					<h3 class="exhibition-title">パーラービーズ<br>
 						<small>[Start : 10:00]<!-- [Area: C] --></small></h3>
