Make exhibition auto height. Fix #52

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ layout: default
 	</div>
 	<div class="exhibition-block">
 		<h2>Exhibition</h2>
-		<ul class="exhibitions">
+		<ul class="exhibitions js-exhibitions">
 			<li>
 				<figure><img src="{{ '/assets/images/exhibition-blocklyduino.jpg' | prepend: site.baseurl }}" alt="Touch&amp;Try／BlocklyDuinoのイメージ"></figure>
 				<div class="description">
