Add timetable note. Fix #23

--- a/index.html
+++ b/index.html
@@ -196,12 +196,17 @@ layout: default
 </div>
 
 <div id="timetable" class="timetable-section">
-	<h1 class="section-title">
-		<span class="section-title-inner">
-			<span class="en">Time Table</span>
-			<span class="ja">タイムテーブル</span>
-		</span>
-	</h1>
+	<div class="container">
+		<h1 class="section-title">
+			<span class="section-title-inner">
+				<span class="en">Time Table</span>
+				<span class="ja">タイムテーブル</span>
+			</span>
+		</h1>
+		<div class="timetable-note">
+			<p>記載の内容を当日やむを得ず変更する場合があります。体験型のエキシビジョンで人数を制限する場合があります。事前申込が必要なプログラムがございます。詳細をお知りになりたい場合はお問い合わせください。</p>
+		</div>
+	</div>
 	<div class="timetable">
 		<div class="session-block">
 			<ol class="clock">
