Add single page for sponsor form. Fix #5

--- a/index.html
+++ b/index.html
@@ -188,9 +188,7 @@ layout: default
 			</ul>
 		</div>
 		<p class="become-a-sponsor-outer">
-			<a href="{{ site.sponsorform_url }}" class="button button-large button-block become-a-sponsor" target="_blank">スポンサー申し込み</a>
-			<br>
-			<a href="{{ '/assets/pdf/sponsor.pdf' | prepend: site.baseurl }}" target="_blank">DojoCon Japan 2016 スポンサーシップのご案内 [PDF]</a>
+			<a href="{{ '/sponsor/' | prepend: site.baseurl }}" class="button button-large button-block become-a-sponsor">スポンサー申し込み</a>
 		</p>
 	</div>
 </div>
