Change "Session Line" & "Workshop Line" to "Sessions" & "Workshops"

--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@ layout: default
 				<li class="icon-3-o-clock">15:00</li>
 				<li class="icon-4-o-clock">16:00</li>
 			</ol>
-			<div class="session-line">
-				<h2>Session Line</h2>
+			<div class="sessions-outer">
+				<h2>Sessions</h2>
 				<ol class="sessions">
 					<li class="duration-30min">
 						<h3 class="session-title">開場・受付</h3>
@@ -284,8 +284,8 @@ layout: default
 				<li class="icon-3-o-clock">15:00</li>
 				<li class="icon-4-o-clock">16:00</li>
 			</ol>
-			<div class="workshop-line">
-				<h2>Workshop Line</h2>
+			<div class="workshops-outer">
+				<h2>Workshops</h2>
 				<ol class="workshops">
 					<li class="duration-30min break-10min">
 						<h3 class="session-title">開場・受付</h3>
