--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ layout: default
 						<h3 class="session-title">開場・受付</h3>
 						<p class="time">[10:00]</p>
 					</li>
-					<li class="bg-light duration-10min">
+					<li class="bg-light duration-10min opening">
 						<h3 class="session-title"><!-- <a href="#opening-ceremony" class="js-session-detail-trigger"> -->オープニングセレモニー<span class="speaker"> / 細谷 崇</span><!-- </a> --></h3>
 						<p class="time">[10:30-10:40]</p>
 					</li>
